Revert "DMC-415 - Configuration of availability - Fix unit test failures to resolve all failing tests"
This reverts commit 9158902337f61a2c4a81a111454cde44b1ddb116.